Made file submission button inline, added spacing between information in artist page, changed font color to be more contrasting, made navbar image more inline, fixed upload page route, fixed spacing between exhibit cards.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,7 @@
 body {
     background: linear-gradient( rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9));
     font-family: 'Arsenal', sans-serif;
+    color:rgb(221, 229, 230);
 }
 
 img.icon {
@@ -30,8 +31,38 @@ img.main-image {
     color: white;
 }
 
+h1 {
+    font-size: 30px;
+    font-weight: bold;
+}
+
 h1.page-heading {
     font-size: 2vw;
     color: rgb(61, 72, 73);
 }
+h2 {
+    font-size: 20px;
+    font-weight: bold;
+}
 
+/* Text input labels */
+label {
+    color:rgb(61, 72, 73);
+}
+
+img {
+    /* Prevent Image stretching */
+    align-self: center;
+}
+
+/* Exhibit cards */
+.card {
+    color:rgba(27, 27, 27);
+    padding: 5px;
+    margin: 3px;
+}
+
+/* Edit button in Artist's page */
+.editButton {
+    margin-bottom: 1vw;
+}
